[gd_scene load_steps=5 format=3 uid="uid://76eu3ptswdj3"]

[ext_resource type="Script" uid="uid://kmb6dr6v8rx8" path="res://scripts/ui/main.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://7bhxo5n1qm0b" path="res://scenes/ui/landing_page.tscn" id="2_u5d7e"]
[ext_resource type="Script" uid="uid://kh2ihaogd1x2" path="res://scripts/managers/schedule_manager.gd" id="3_kh29p"]
[ext_resource type="Script" uid="uid://eptqb6ewkseh" path="res://scripts/managers/navigation_manager.gd" id="4_qj2dr"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.937, 0.945, 0.96, 1)

[node name="ScheduleManager" type="Node" parent="."]
script = ExtResource("3_kh29p")

[node name="NavigationManager" type="Node" parent="."]
script = ExtResource("4_qj2dr")

[node name="ContentContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LandingPage" parent="ContentContainer" instance=ExtResource("2_u5d7e")]
layout_mode = 1

[node name="StatusBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="StatusLabel" type="Label" parent="StatusBar"]
layout_mode = 2
text = "Ready."
